--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+
+# cordova
+/plugins
+/platforms
+
+
 # compiled output
+/www
 /dist
 /tmp
 /out-tsc
