--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
         "test": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e",
-        "s": "ng serve --hmr -e=hmr",
-        "ssl": "sudo ng serve --ssl true --ssl-key './tmp/privkey.pem' --ssl-cert './tmp/fullchain.pem' --host sonub.com --port 443",
+        "hmr": "ng serve --hmr -e=hmr",
+        "s": "sudo ng serve --ssl true --ssl-key './tmp/privkey.pem' --ssl-cert './tmp/fullchain.pem' --host sonub.com --port 443",
         "publish": "ng build --output-path=www"
     },
     "private": true,
