--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -11,8 +11,8 @@
   "exclude": [
     "test.ts",
     "**/*.spec.ts",
-    "./firebase-backend/functions/index.ts",
-    "./firebase-backend/functions/test.ts",
-    "./firebase-backend/functions/node_modules/**/*.ts"
+    "firebase-backend/functions/index.ts",
+    "firebase-backend/functions/test.ts",
+    "firebase-backend/functions/node_modules"
   ]
 }
