--- a/package.json
+++ b/package.json
@@ -1,69 +1,78 @@
 {
-  "name": "angular-cms",
-  "version": "0.0.0",
-  "license": "MIT",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "hmr": "ng serve --hmr -e=hmr",
-    "s": "sudo ng serve --ssl true --ssl-key './tmp/privkey.pem' --ssl-cert './tmp/fullchain.pem' --host sonub.com --port 443",
-    "publish": "ng build --output-path=www"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^4.2.2",
-    "@angular/common": "^4.2.2",
-    "@angular/compiler": "^4.2.2",
-    "@angular/core": "^4.2.2",
-    "@angular/forms": "^4.2.2",
-    "@angular/http": "^4.2.2",
-    "@angular/platform-browser": "^4.2.2",
-    "@angular/platform-browser-dynamic": "^4.2.2",
-    "@angular/router": "^4.2.2",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.26",
-    "cordova-android": "^6.2.3",
-    "cordova-browser": "^4.1.0",
-    "cordova-plugin-device": "^1.1.6",
-    "cordova-plugin-whitelist": "^1.3.2",
-    "core-js": "^2.4.1",
-    "firebase": "^4.1.3",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.8.12"
-  },
-  "devDependencies": {
-    "@angular/cli": "1.1.2",
-    "@angular/compiler-cli": "^4.2.2",
-    "@angular/language-service": "^4.2.2",
-    "@angularclass/hmr": "^1.2.2",
-    "@types/jasmine": "2.5.45",
-    "@types/jquery": "^3.2.2",
-    "@types/node": "~6.0.60",
-    "codelyzer": "~3.0.1",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
-    "ts-node": "~3.0.4",
-    "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
-  },
-  "cordova": {
-    "plugins": {
-      "cordova-plugin-whitelist": {},
-      "cordova-plugin-device": {}
+    "name": "angular-cms",
+    "version": "0.0.0",
+    "license": "MIT",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build",
+        "test": "ng test",
+        "lint": "ng lint",
+        "e2e": "ng e2e",
+        "hmr": "ng serve --hmr -e=hmr",
+        "s": "sudo ng serve --ssl true --ssl-key './tmp/privkey.pem' --ssl-cert './tmp/fullchain.pem' --host sonub.com --port 443",
+        "publish": "npm run build:aot:www && npm run deploy",
+        "setup": "npm run build-ie-polyfills",
+        "build-ie-polyfills": "node node_modules/webpack/bin/webpack.js -p src/ie-polyfills.js src/assets/js/ie-polyfills.min.js",
+        "build:www": "ng build --output-path=www",
+        "build:aot:www": "ng build --aot --output-path=www",
+        "deploy": "firebase deploy"
     },
-    "platforms": [
-      "android",
-      "browser"
-    ]
-  }
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "^4.2.2",
+        "@angular/common": "^4.2.2",
+        "@angular/compiler": "^4.2.2",
+        "@angular/core": "^4.2.2",
+        "@angular/forms": "^4.2.2",
+        "@angular/http": "^4.2.2",
+        "@angular/platform-browser": "^4.2.2",
+        "@angular/platform-browser-dynamic": "^4.2.2",
+        "@angular/router": "^4.2.2",
+        "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.26",
+        "classlist.js": "^1.1.20150312",
+        "cordova-android": "^6.2.3",
+        "cordova-browser": "^4.1.0",
+        "cordova-plugin-device": "^1.1.6",
+        "cordova-plugin-inappbrowser": "^1.7.1",
+        "cordova-plugin-whitelist": "^1.3.2",
+        "core-js": "^2.4.1",
+        "firebase": "^4.1.3",
+        "rxjs": "^5.1.0",
+        "web-animations-js": "^2.2.5",
+        "zone.js": "^0.8.12"
+    },
+    "devDependencies": {
+        "@angular/cli": "1.1.2",
+        "@angular/compiler-cli": "^4.2.2",
+        "@angular/language-service": "^4.2.2",
+        "@angularclass/hmr": "^1.2.2",
+        "@types/jasmine": "2.5.45",
+        "@types/jquery": "^3.2.2",
+        "@types/node": "~6.0.60",
+        "codelyzer": "~3.0.1",
+        "jasmine-core": "~2.6.2",
+        "jasmine-spec-reporter": "~4.1.0",
+        "karma": "~1.7.0",
+        "karma-chrome-launcher": "~2.1.1",
+        "karma-cli": "~1.0.1",
+        "karma-coverage-istanbul-reporter": "^1.2.1",
+        "karma-jasmine": "~1.1.0",
+        "karma-jasmine-html-reporter": "^0.2.2",
+        "protractor": "~5.1.2",
+        "ts-node": "~3.0.4",
+        "tslint": "~5.3.2",
+        "typescript": "~2.3.3"
+    },
+    "cordova": {
+        "plugins": {
+            "cordova-plugin-whitelist": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-inappbrowser": {}
+        },
+        "platforms": [
+            "android",
+            "browser"
+        ]
+    }
 }
