--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
         "cordova-android": "^6.2.3",
         "cordova-browser": "^4.1.0",
         "cordova-plugin-device": "^1.1.6",
-        "cordova-plugin-inappbrowser": "^1.7.1",
         "cordova-plugin-whitelist": "^1.3.2",
         "core-js": "^2.4.1",
         "firebase": "^4.1.3",
@@ -67,8 +66,7 @@
     "cordova": {
         "plugins": {
             "cordova-plugin-whitelist": {},
-            "cordova-plugin-device": {},
-            "cordova-plugin-inappbrowser": {}
+            "cordova-plugin-device": {}
         },
         "platforms": [
             "android",
