--- a/package.json
+++ b/package.json
@@ -33,8 +33,14 @@
         "classlist.js": "^1.1.20150312",
         "cordova-android": "^6.2.3",
         "cordova-browser": "^4.1.0",
+        "cordova-ios": "^4.4.0",
+        "cordova-plugin-browsertab": "^0.2.0",
+        "cordova-plugin-buildinfo": "^1.1.0",
+        "cordova-plugin-compat": "^1.1.0",
         "cordova-plugin-device": "^1.1.6",
+        "cordova-plugin-inappbrowser": "^1.7.1",
         "cordova-plugin-whitelist": "^1.3.2",
+        "cordova-universal-links-plugin": "^1.2.1",
         "core-js": "^2.4.1",
         "firebase": "^4.1.3",
         "rxjs": "^5.1.0",
@@ -66,7 +72,11 @@
     "cordova": {
         "plugins": {
             "cordova-plugin-whitelist": {},
-            "cordova-plugin-device": {}
+            "cordova-plugin-device": {},
+            "cordova-plugin-buildinfo": {},
+            "cordova-universal-links-plugin": {},
+            "cordova-plugin-browsertab": {},
+            "cordova-plugin-inappbrowser": {}
         },
         "platforms": [
             "android",
