--- a/package.json
+++ b/package.json
@@ -20,15 +20,15 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "^4.2.2",
-        "@angular/common": "^4.2.2",
-        "@angular/compiler": "^4.2.2",
-        "@angular/core": "^4.2.2",
-        "@angular/forms": "^4.2.2",
-        "@angular/http": "^4.2.2",
-        "@angular/platform-browser": "^4.2.2",
-        "@angular/platform-browser-dynamic": "^4.2.2",
-        "@angular/router": "^4.2.2",
+        "@angular/animations": "^4.3.0-rc.0",
+        "@angular/common": "^4.3.0-rc.0",
+        "@angular/compiler": "^4.3.0-rc.0",
+        "@angular/core": "^4.3.0-rc.0",
+        "@angular/forms": "^4.3.0-rc.0",
+        "@angular/http": "^4.3.0-rc.0",
+        "@angular/platform-browser": "^4.3.0-rc.0",
+        "@angular/platform-browser-dynamic": "^4.3.0-rc.0",
+        "@angular/router": "^4.3.0-rc.0",
         "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.26",
         "classlist.js": "^1.1.20150312",
         "cordova-android": "^6.2.3",
@@ -49,8 +49,8 @@
     },
     "devDependencies": {
         "@angular/cli": "1.1.2",
-        "@angular/compiler-cli": "^4.2.2",
-        "@angular/language-service": "^4.2.2",
+        "@angular/compiler-cli": "^4.3.0-rc.0",
+        "@angular/language-service": "^4.3.0-rc.0",
         "@angularclass/hmr": "^1.2.2",
         "@types/jasmine": "2.5.45",
         "@types/jquery": "^3.2.2",
