update for message

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
         "publish": "npm run build:aot:www && npm run deploy",
         "setup": "npm run build-ie-polyfills",
         "build-ie-polyfills": "node node_modules/webpack/bin/webpack.js -p src/ie-polyfills.js src/assets/js/ie-polyfills.min.js",
-        "build:www": "ng build --output-path=www",
-        "build:aot:www": "ng build --aot --output-path=www",
+        "build:www": "ng build --prod --output-path=www",
+        "build:aot:www": "ng build --prod --aot --output-path=www",
         "deploy": "firebase deploy"
     },
     "private": true,
@@ -29,6 +29,7 @@
         "@angular/platform-browser": "^4.3.0-rc.0",
         "@angular/platform-browser-dynamic": "^4.3.0-rc.0",
         "@angular/router": "^4.3.0-rc.0",
+        "@angular/service-worker": "^1.0.0-beta.16",
         "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.26",
         "classlist.js": "^1.1.20150312",
         "cordova-android": "^6.2.3",
@@ -43,14 +44,16 @@
         "cordova-universal-links-plugin": "^1.2.1",
         "core-js": "^2.4.1",
         "firebase": "^4.1.3",
+        "ng-pwa-tools": "0.0.15",
         "rxjs": "^5.1.0",
         "web-animations-js": "^2.2.5",
         "zone.js": "^0.8.12"
     },
     "devDependencies": {
-        "@angular/cli": "1.1.2",
+        "@angular/cli": "^1.2.0",
         "@angular/compiler-cli": "^4.3.0-rc.0",
         "@angular/language-service": "^4.3.0-rc.0",
+        "@angular/platform-server": "^4.2.6",
         "@angularclass/hmr": "^1.2.2",
         "@types/jasmine": "2.5.45",
         "@types/jquery": "^3.2.2",
