--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 
+
+
 # cordova
 /plugins
 /platforms
@@ -16,6 +18,7 @@
 /node_modules
 
 # IDEs and editors
+/.vscode
 /.idea
 .project
 .classpath
