--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "e2e": "ng e2e",
         "hmr": "ng serve --hmr -e=hmr",
         "s": "sudo ng serve --ssl true --ssl-key './tmp/privkey.pem' --ssl-cert './tmp/fullchain.pem' --host sonub.com --port 443",
+        "ssl": "ng serve --ssl true --ssl-key './tmp/privkey.pem' --ssl-cert './tmp/fullchain.pem' --host sonub.com --port 443",
         "publish": "npm run build:aot:www && npm run deploy",
         "setup": "npm run build-ie-polyfills",
         "build-ie-polyfills": "node node_modules/webpack/bin/webpack.js -p src/ie-polyfills.js src/assets/js/ie-polyfills.min.js",
@@ -36,7 +37,8 @@
         "cordova-ios": "^4.4.0",
         "cordova-plugin-browsertab": "^0.2.0",
         "cordova-plugin-buildinfo": "^1.1.0",
-        "cordova-plugin-compat": "^1.1.0",
+        "cordova-plugin-compat": "^1.0.0",
+        "cordova-plugin-customurlscheme": "^4.3.0",
         "cordova-plugin-device": "^1.1.6",
         "cordova-plugin-inappbrowser": "^1.7.1",
         "cordova-plugin-whitelist": "^1.3.2",
@@ -76,7 +78,13 @@
             "cordova-plugin-buildinfo": {},
             "cordova-universal-links-plugin": {},
             "cordova-plugin-browsertab": {},
-            "cordova-plugin-inappbrowser": {}
+            "cordova-plugin-inappbrowser": {},
+            "cordova-plugin-customurlscheme": {
+                "URL_SCHEME": "com.sonub.www",
+                "ANDROID_SCHEME": " ",
+                "ANDROID_HOST": " ",
+                "ANDROID_PATHPREFIX": "/"
+            }
         },
         "platforms": [
             "android",
