--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "firebase": "^4.1.3",
         "ng-pwa-tools": "0.0.15",
         "rxjs": "^5.1.0",
+        "shared-library": "github:thruthesky/shared-library",
         "web-animations-js": "^2.2.5",
         "zone.js": "^0.8.12"
     },
